--- a/server.conf
+++ b/server.conf
@@ -14,10 +14,10 @@ tcp_nodelay     y
 SendFile      y
 SndBufSize    32768  #  8192 16384 32768
 
-OverMaxConnections   100  
-MaxWorkConnections   768 
+OverMaxWorkConnections   100  
+MaxWorkConnections      1000 
 
-MaxEventConnections  200
+MaxEventConnections      100
 
 NumProc      4
 MaxThreads 250
