--- a/server.conf
+++ b/server.conf
@@ -1,4 +1,4 @@
-ServerSoftware   server-?________
+ServerSoftware   server-?
 ServerPort         20000
 ServerAddr       0.0.0.0
 
@@ -19,7 +19,8 @@ MaxWorkConnections      1024
 
 MaxEventConnections      100
 
-NumProc      0
+NumProc      2
+MaxNumProc   8
 MaxThreads 250
 MinThreads   6
 MaxCgiProc  30
@@ -51,7 +52,11 @@ fastcgi {
 	~/test  127.0.0.1:9004
 }
 
+scgi {
+	~/scgi_test 127.0.0.1:9009
+}
+
 ShowMediaFiles y   #  y/n
 
 User   root         
-Group  www-data   
+Group  www-data
